# aufschreibesysteme-fm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml
afm/: __init__.py
afm/cli/: __init__.py  demo.py  infer.py  morph.py  oss.py  space_deploy.py  train.py
afm/core/: __init__.py  expert_lora.py  losses.py  mulan_sigma.py  physical_noise_prior.py  pipeline.py  regime_router.py  schedulers.py  trainer.py
afm/data/: __init__.py  loaders.py
afm/eval/: __init__.py  fid.py  inscription_consistency.py  morph_smoothness.py  regime_classifier.py  runner.py
afm/morph/: __init__.py  dsbm.py
afm/regimes/: __init__.py  base.py  crt.py  film.py  gramophone.py  jpeg.py  parchment.py  photograph.py  typewriter.py
afm/state/: __init__.py  manager.py
configs/: mvp.yaml
data/manifests/: README.md  audio_whitelist.csv  captions_eval.txt  gramophone.csv
data/measurement/: README.md
docs/: README.md  appendix_kittler.md  architecture.d2  architecture.md  reproducibility.md  signal_materiality.md
examples/: infer_cli.py  morph_demo.ipynb  quickstart.md  train_sana.ipynb
paper/: main.tex  refs.bib
scripts/: audit_audio.py  bootstrap.sh  fetch_measurements.py
space/: README.md  app.py  requirements.txt  teaser_gen.py
tests/: test_cli.py  test_lora_load.py  test_mulan.py  test_oss_consistency.py  test_phrasing.py  test_prior.py  test_regimes.py  test_router.py  test_state.py
