[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afm"
version = "0.1.0"
description = "Aufschreibesysteme Flow Matching — lossy codecs as first-class generative regimes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "aufschreibesysteme-fm contributors" }]
keywords = [
    "flow-matching", "diffusion", "lora", "mixture-of-experts",
    "codec", "media-archaeology", "kittler", "sana", "diffusers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # core stack
    "torch>=2.2,<3.0",
    "diffusers>=0.30",
    "peft>=0.11",
    "accelerate>=0.30",
    "transformers>=4.43",
    "safetensors>=0.4",
    "huggingface_hub>=0.24",
    # quantisation / 8bit optimiser
    "bitsandbytes>=0.43",
    # audio
    "encodec>=0.1.1",
    # vector codec
    # diffvg is installed from source — see docs/architecture.md
    # signal / image
    "pyrtools>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pillow>=10",
    "soundfile>=0.12",
    # CLI / config / state
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    # eval
    "lpips>=0.1.4",
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    # data
    "datasets>=2.20",
    # demo / space
    "gradio>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-licenses>=4.4",
]
paper = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.scripts]
afm = "afm.cli.oss:app"

[project.urls]
Homepage = "https://github.com/hinanohart/aufschreibesysteme-fm"
Documentation = "https://github.com/hinanohart/aufschreibesysteme-fm/tree/main/docs"
Issues = "https://github.com/hinanohart/aufschreibesysteme-fm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["afm*"]
exclude = ["tests*", "experiments*", "data*", "paper*", "space*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires CUDA-capable GPU",
    "slow: long-running (training/eval)",
    "integration: full pipeline smoke",
]
